# bridge

./: #content based indexing  .env  .env.tmp  Dockerfile  LICENSE  README.md  abi.js  accounts.js  bridge.js  bridge4.js  config.toml  docker-compose.yml  infokovan  mint.js  package-lock.json  package.json  password.file  sendTokens.js  testaccount  todo
auditor/: vltxtknaudit.abi  vltxtknaudit.cpp  vltxtknaudit.hpp  vltxtknaudit.wasm
auditor/Support/OpenEthereum/: config.toml
contracts/token/VTX/: VTXRecipient.sol  VTXSender.sol  VTXToken.sol
custodian/: notes  vltxcstdn.abi  vltxcstdn.cpp  vltxcstdn.hpp  vltxcstdn.wasm
doc/: AutomatedWrappedTokenCustodian.aux  AutomatedWrappedTokenCustodian.md  AutomatedWrappedTokenCustodian.out  AutomatedWrappedTokenCustodian.tex  TestPlan.aux  TestPlan.md  TestPlan.out  TestPlan.tex  bridge.png~
oracle/: .env  oracle.js  oracle_test.js
rsbridge/: Cargo.toml
rsbridge/src/: main.rs
src/: bridge.js  bridgediffaccnt.js  bridgetest.js  package-lock.json  package.json  sendTokens.js  various pools:
test/: accounts  run.js
test/test1/: balance test.js  notes  providertest.js  quaremachina.js  rpctest.js  v44444444444.js  vltxtknaudit.js  volentixnode.js  volentixtst5.js  vtx222222222.js  x11111111111.js  x22222222222.js  x33333333333.js
